--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 spring.application.name=springboot-sample
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# Set the MariaDB connection details
+spring.datasource.url=jdbc:mariadb://192.168.1.113:3306/springboot
+spring.datasource.driverClassName=org.mariadb.jdbc.Driver
+spring.datasource.username=springboot
+spring.datasource.password=application
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
 spring.jpa.hibernate.ddl-auto=none
 
 server.port=8082
