--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=none
 
 server.port=8082
+
+logging.level.org.springframework.ws.client.MessageTracing.sent=TRACE
+logging.level.org.springframework.ws.client.MessageTracing.received=TRACE
