--- a/pom.xml
+++ b/pom.xml
@@ -47,10 +47,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web-services</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-webflux</artifactId>
-        </dependency>
         <!-- tag::springws[] -->
         <dependency>
             <groupId>wsdl4j</groupId>
@@ -93,6 +89,13 @@
             <artifactId>fop</artifactId>
             <version>2.10</version>
         </dependency>
+        <!-- For OpenAPI 3 docs and Swagger UI -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.2.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
