--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,6 @@ server.port=8082
 
 logging.level.org.springframework.ws.client.MessageTracing.sent=TRACE
 logging.level.org.springframework.ws.client.MessageTracing.received=TRACE
+
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
